[gd_scene load_steps=6 format=3 uid="uid://c2vcf2wfbkhy4"]

[ext_resource type="Script" path="res://scripts/mortar_tower.gd" id="1_1jji6"]
[ext_resource type="ArrayMesh" uid="uid://pvg716eji26m" path="res://assets/bubblegumTower.obj" id="2_rn5hv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_neth3"]
size = Vector3(2.38691, 2, 2.41113)

[sub_resource type="SphereShape3D" id="SphereShape3D_stqfw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_i5tp8"]

[node name="Mortar_Tower" type="StaticBody3D" groups=["Tower"]]
script = ExtResource("1_1jji6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.18, 0, 0, 0, 0.18, 0, 0, 0, 0.18, -0.008385, 0.0858327, -0.075106)
mesh = ExtResource("2_rn5hv")

[node name="Aim" type="Marker3D" parent="MeshInstance3D"]
transform = Transform3D(5.55556, 0, 0, 0, 5.55556, 0, 0, 0, 5.55556, 0.0465857, 20.6507, 0.463035)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0468269, 0.854782, 0.0142986)
shape = SubResource("BoxShape3D_neth3")

[node name="DetectionRange" type="Area3D" parent="."]

[node name="OuterRange" type="CollisionShape3D" parent="DetectionRange"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
shape = SubResource("SphereShape3D_stqfw")

[node name="TooCloseRange" type="Area3D" parent="."]

[node name="InnerRange" type="CollisionShape3D" parent="TooCloseRange"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("SphereShape3D_i5tp8")

[node name="BulletContainer" type="Node" parent="."]

[node name="FireRate" type="Timer" parent="."]
wait_time = 2.0

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="body_exited" from="DetectionRange" to="." method="_on_detection_range_body_exited"]
[connection signal="body_entered" from="TooCloseRange" to="." method="_on_too_close_range_body_entered"]
[connection signal="timeout" from="FireRate" to="." method="_on_fire_rate_timeout"]
